// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useFetch should dispatch singles 1`] = `
{
  "args": [
    {
      "id": 5,
    },
  ],
  "endpoint": [Function],
  "key": "GET http://test.com/article-cooler/5",
  "meta": {
    "reject": [Function],
    "resolve": [Function],
  },
  "type": "rdc/fetch",
}
`;

exports[`useFetch should dispatch with fetch shape defined dataExpiryLength 1`] = `
{
  "args": [
    {
      "id": 5,
    },
  ],
  "endpoint": [Function],
  "key": "GET http://test.com/article-static/5",
  "meta": {
    "reject": [Function],
    "resolve": [Function],
  },
  "type": "rdc/fetch",
}
`;

exports[`useFetch should dispatch with fetch shape defined errorExpiryLength 1`] = `
{
  "args": [
    {
      "id": 5,
    },
  ],
  "endpoint": [Function],
  "key": "GET http://test.com/article-static/5",
  "meta": {
    "reject": [Function],
    "resolve": [Function],
  },
  "type": "rdc/fetch",
}
`;

exports[`useFetch should dispatch with resource defined dataExpiryLength 1`] = `
{
  "args": [
    {
      "id": 5,
    },
  ],
  "endpoint": [Function],
  "key": "GET http://test.com/article-static/5",
  "meta": {
    "reject": [Function],
    "resolve": [Function],
  },
  "type": "rdc/fetch",
}
`;
